--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <link rel="stylesheet" href="../CSS/style.css">
     <meta charset="UTF-8">
+    <meta name="yandex-verification" content="d496161b7f4783a8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cristal E.J.</title>
